# goestools-win

./: .gitmodules  Build.ps1  CMakeLists.txt  Configure-VCPKG.ps1  README.md
config/: goesproc-goesr.conf  goesrecv-airspy.conf  goesrecv-nanomsg.conf  goesrecv-rtlsdr.conf
docs/: index.rst
scripts/: Start Goesproc.bat  Start Goesrecv (AirSpy).bat  Start Goesrecv (RTL-SDR).bat
src/assembler/: CMakeLists.txt  packetinfo.cc  session_pdu.cc  session_pdu.h  transport_pdu.h
src/dcs/: CMakeLists.txt  dcs.h
src/decoder/: CMakeLists.txt  correlator.cc  correlator.h  packetdump.cc  reed_solomon.cc  reed_solomon.h
src/goesemwin/: CMakeLists.txt  goesemwin.cc  qbt.h
src/goeslrit/: CMakeLists.txt
src/goespackets/: CMakeLists.txt  options.h
src/goesproc/: CMakeLists.txt  file_writer.cc  goesproc.cc  handler.h  handler_emwin.cc  handler_goesr.cc  handler_goesr.h  handler_himawari8.cc  handler_nws_text.cc  handler_text.cc  lrit_processor.cc  map_drawer.cc  map_drawer.h  options.cc  packet_processor.cc  proj.cc  proj.h
src/goesrecv/: CMakeLists.txt  agc.cc  airspy_source.cc  costas.cc  datagram_socket.cc  datagram_socket.h  decoder.cc  demodulator.cc  demodulator.h  goesrecv.cc  monitor.cc  nanomsg_source.cc  options.cc  rrc.cc  rtlsdr_source.cc  sample_publisher.h  source.cc
src/lib/: CMakeLists.txt  dir.cc  dir.h  file_reader.cc  file_writer.cc  nanomsg_writer.h  unzip.cc  version.cc  zip.h
src/lrit/: CMakeLists.txt  areadump.cc  file.cc  lrit.cc  lritdump.cc
src/util/: CMakeLists.txt  fs.cc  strptime.cc  strptime.h  time.cc  time.h
