find_library(GETOPT_LIB getopt)
add_executable(goesemwin goesemwin.cc options.cc qbt.cc emwin.cc)
add_sanitizers(goesemwin)
install(TARGETS goesemwin COMPONENT goestools RUNTIME DESTINATION bin)
target_link_libraries(goesemwin ${GETOPT_LIB})
target_link_libraries(goesemwin assembler)
target_link_libraries(goesemwin nanomsg)
target_link_libraries(goesemwin packet_reader)
target_link_libraries(goesemwin util)
target_link_libraries(goesemwin version)
target_link_libraries(goesemwin zip)
set_target_properties(goesemwin PROPERTIES LINK_FLAGS "setargv.obj")