find_package(nanomsg CONFIG REQUIRED)
add_executable(goespackets goespackets.cc options.cc)
add_sanitizers(goespackets)
install(TARGETS goespackets COMPONENT goestools RUNTIME DESTINATION bin)
find_library(GETOPT_LIB getopt)
target_link_libraries(goespackets nanomsg packet_reader packet_writer util ${GETOPT_LIB})
target_link_libraries(goespackets version)
set_target_properties(goespackets PROPERTIES LINK_FLAGS "setargv.obj")